--- a/style.css
+++ b/style.css
@@ -76,7 +76,6 @@ header{
     opacity: 1;
     visibility: visible;
 }
-
 input{
     display: block;
     padding: 1rem;
@@ -89,26 +88,26 @@ form small{
     opacity: 0.4;
 }
 button{
-    padding: 1rem 5.4rem;
     border: solid .25px;
     border-radius: 0.25rem;
+    width: 13.2rem;
+    padding: 1rem 0;
 }
 button.cancel{
-    color: rgb(226, 101, 101);
     background-color: transparent;
+    color: rgb(226, 101, 101);
     margin-right: 1rem;
 }
 button.confirm{
+    background-color: #49aa26;
     color: white;
     border: #49aa26;
-    background-color: #49aa26;
 }
 button.cancel:hover{
     color: rgb(209, 51, 51);
     cursor: pointer;
 }
 button.confirm:hover{
-    
     background-color: #52ca26;
     cursor: pointer;
 }
@@ -196,11 +195,14 @@ td.expense{
     color: #e92929;
 }
 /*-------------------------------FOOTER-------------------------------*/
-footer{
+.footer{
     text-align: center;
-    padding: 4rem 0 2rem;
     color: var(--dark-blue);
     opacity: 0.6;
+    margin: 2rem 0; 
+}
+.footer.active{
+    visibility: hidden;
 }
 
 
